--- a/templates/register.html
+++ b/templates/register.html
@@ -1,36 +1,9 @@
-<!doctype html>
-<html lang="en">
+{% extends 'base.html' %}
+{% block content %}
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-  <!-- Bootstrap core CSS -->
-  <link href="static/css/bootstrap.min.css" rel="stylesheet">
-  <title> AskMe project </title>
-
-</head>
-
-<div class="container-fluid">
-  <nav class="row navbar navbar-expand-md navbar-dark bg-dark">
-    <a class="col-3 navbar-brand" href="#">AskMe</a>
-    <div class="col-9 d-flex justify-content-end">
-      <form class="form-inline">
-        <input class="form-control mr-2" type="text" placeholder="Search" aria-label="Search">
-      </form>
-      <button class="btn btn-secondary" type="submit">Search</button>
-      <button type="button" class="btn btn-primary ml-5">LogIn</button>
-      <button type="button" class="btn btn-primary ml-2">Register</button>
-  </nav>
-</div>
-
- 
-  <main role="main" class="container">
-
- <div class="container mt-4 mx-3">
-    <div class="row">
+<div class="row">
       <div class="col-10">
-        <h3 style="margin-bottom: 15px;">Log In</h3>
+        <h3 style="margin-bottom: 15px;">Sign Up</h3>
 
         <form class="needs-validation" novalidate>
             <div class="form-row">
@@ -62,7 +35,7 @@
                     Please choose a username.
                   </div>
                 </div>
-              </div> 
+              </div>
               <div class="col-md-4 mb-3">
                 <label for="validationCustom03">City</label>
                 <input type="text" class="form-control" id="validationCustom03" placeholder="City" required>
@@ -92,10 +65,10 @@
 
                 <div class="invalid-feedback">
                   Please provide a valid avatar.
-                
+
                 </div>
             </div>
-            
+
             <div class="form-group">
               <div class="form-check">
                 <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
@@ -109,7 +82,7 @@
             </div>
             <button class="btn btn-primary" type="submit">Submit form</button>
           </form>
-          
+
           <script>
           // Example starter JavaScript for disabling form submissions if there are invalid fields
           (function() {
@@ -131,48 +104,8 @@
           })();
           </script>
 
-        
-      </div>
-      <div class="col-2 d-none d-sm-none d-md-block">
-        <div class="row" style="min-height: 50px;"></div>
-        <div class="row">
-          <h4>Popular tags</h4>
-          <h5>
-            <p><a href="index.html" class="text-primary">C/C++   </a> 
-             <a href="index.html" class="text-secondary">Python </a> 
-             <a href="index.html" class="text-success">JavaScript </a>
-             <a href="index.html" class="text-danger">Web </a>
-             <a href="index.html" class="text-warning">mail.ru </a>
-             <a href="index.html" class="text-info">google </a>
-             <a href="index.html" class="text-dark">park </a>
-             <a href="index.html" class="text-secondary">C# </a></p>
-          </h5>
-          
-          
-        </div>
-        <div class="row">
-          <h4>Best users</h4> <br>
-
-          <h5>
-            <a href="#" class="badge badge-primary">Bob</a>
-            <a href="#" class="badge badge-primary">Alisa</a>
-            <a href="#" class="badge badge-primary">Mary</a>
-            <a href="#" class="badge badge-primary">Jack</a>
-            <a href="#" class="badge badge-primary">Nik</a>
-
-          
-        </div>
 
       </div>
-    </div>
   </div>
 
-  <!-- tags -->
-
-
-  </main><!-- /.container -->
-  <script src="static/js/jquery.com/jquery-3.4.1.slim.min.js"></script>
-  <script src="static/js/bootstrap.bundle.min.js"></script>
-</body>
-
-</html>
+{% endblock content %}
