--- a/templates/inc/answer.html
+++ b/templates/inc/answer.html
@@ -5,7 +5,7 @@
       <div class="row justify-content-center">
         <div class="col-1 mx-0 p-0">
           <div class="row">
-            <img src="{% static 'img/cat.jpg' %}" width="64" height="64" class=" img-thumbnail">
+            <img src="{% static 'img/cat.jpg' %}" width="64" height="64" class="img-thumbnail">
           </div>
 
           <div class="row  pl-2 ">
@@ -22,10 +22,13 @@
         </div>
 
         <div class="col-10">
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-            incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-            incididunt ut labore et dolore magna aliqua. </p>
-            <span class="oi oi-check"></span> Correct answer!
+            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                   tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur
+              adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+            <label class="form-check-label" for="defaultCheck1">
+              Correct answer!
+            </label>
         </div>
       </div>
     </div>
