--- a/templates/hot.html
+++ b/templates/hot.html
@@ -5,16 +5,16 @@
     <div class="col-10">
       <h3>Questions</h3>
     </div>
-    {% include 'inc/but_ask.html' %}
+    {% include 'inc/ask_button.html' %}
   </div>
 
   <div class="card text my-2">
 
-    {% include 'inc/container_for_quest.html' with new_css_classes="nav-link" hot_css_classes="nav-link active"%}
+    {% include 'inc/question_navbar.html' with new_css_classes="nav-link" hot_css_classes="nav-link active"%}
 
     <div class="body">
 
-     {% for question in questions %}
+     {% for question in page_obj %}
       {% include 'inc/question.html' %}
      {% endfor %}
 
