--- a/templates/inc/right_menu.html
+++ b/templates/inc/right_menu.html
@@ -6,14 +6,11 @@
     <div class="row">
       <h4>Popular tags</h4>
       <h5>
-        <p><a href="index.html" class="text-primary">C/C++   </a>
-         <a href="index.html" class="text-secondary">Python </a>
-         <a href="index.html" class="text-success">JavaScript </a>
-         <a href="index.html" class="text-danger">Web </a>
-         <a href="index.html" class="text-warning">mail.ru </a>
-         <a href="index.html" class="text-info">google </a>
-         <a href="index.html" class="text-dark">park </a>
-         <a href="index.html" class="text-secondary">C# </a></p>
+        <p>
+          {% for tag in popular_tags %}
+            <a href="{% url 'tag' tag_name=tag %}" >{{tag}}</a>
+          {% endfor %}
+        </p>
       </h5>
     </div>
 
