--- a/templates/inc/question.html
+++ b/templates/inc/question.html
@@ -6,8 +6,11 @@
 		<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-1 mx-0 p-0">
+					<div class="row text-center сenter-top my-1">
+						{{question.author}}
+					</div>
 					<div class="row">
-					<img src="{% static 'img/cat.jpg' %}" width="64" height="64" class=" img-thumbnail">
+					<img src="{{ question.author.avatar.url }}" width="64" height="64" class="img-thumbnail mx-2">
 					</div>
 
 					<div class="row  pl-2 ">
@@ -19,17 +22,17 @@
 						</button>
 					</div>
 						<div class="row pl-4 h-1">
-							<h5>{{ question.like }}</h5>
+							<h5>{{ question.currating }}</h5>
 						</div>
 					</div>
 
 					<div class="col-10">
-						<p class="card-text">{{ question.body }}</p>
-						<a href="{% url 'question' qid=question.id %}" >answers({{ question.total_answers }})</a>
+						<p class="card-text">{{ question.text }}</p>
+						<a href="{% url 'question' qid=question.id %}" ></a>
 							Tags:
-						{% for tag in question.tags %}
-							<a href="{% url 'tag' tag_name=tag %}" >{{tag}}</a>
-						{% endfor %}
+							{% for tag in question.tags.all %}
+								<a href="{% url 'tag' tag_name=tag %}" >{{tag}}</a>
+							{% endfor %}
 
 				</div>
 			</div>
