--- a/templates/ask.html
+++ b/templates/ask.html
@@ -1,57 +1,19 @@
 {% extends 'base.html' %}
+{% load bootstrap4 %}
 {% block content %}
 
-    <div class="row">
-      <div class="col-10">
-        <h3 style="margin-bottom: 15px;">New question</h3>
-
-        <form class="needs-validation" novalidate>
-          <div class="form-group row">
-            <label class="col-sm-1 col-form-label">Title</label>
-            <div class="col-sm-10">
-              <input class="form-control" id="exampleInputEmail1" placeholder="Enter title question" maxlength="100" required>
-            </div>
-          </div>
-       
-          <div class="form-group row">
-            <label class="col-sm-1 col-form-label">Text</label>
-            <div class="col-sm-10">
-              <textarea class="form-control" id="validationCustom03" rows="4" placeholder="Enter question" maxlength="1000" required></textarea>
-            </div>
-          </div>
-
-          <div class="form-group row">
-            <label class="col-sm-1 col-form-label">Tags</label>
-            <div class="col-sm-10">
-              <input class="form-control" id="exampleInputEmail1" placeholder="Enter tags" maxlength="100" required>
-            </div>
-          </div>
-        
-          <button type="submit" class="btn btn-primary">Ask</button>
-        </form>
-        <script>
-          // Example starter JavaScript for disabling form submissions if there are invalid fields
-          (function() {
-            'use strict';
-            window.addEventListener('load', function() {
-              // Fetch all the forms we want to apply custom Bootstrap validation styles to
-              var forms = document.getElementsByClassName('needs-validation');
-              // Loop over them and prevent submission
-              var validation = Array.prototype.filter.call(forms, function(form) {
-                form.addEventListener('submit', function(event) {
-                  if (form.checkValidity() === false) {
-                    event.preventDefault();
-                    event.stopPropagation();
-                  }
-                  form.classList.add('was-validated');
-                }, false);
-              });
-            }, false);
-          })();
-          </script>    
-        
-
-      </div>
-      </div>
+  <div class="row">
+    <div class="col-10">
+      <h3 style="margin-bottom: 15px;">New question</h3>
+      <form method="post" novalidate>
+        {% csrf_token %}
+        {% bootstrap_form form %}
+        {% buttons %}
+            <button type="submit" class="btn btn-primary">Ask</button>
+        {% endbuttons %}
+      </form>
+    </div>
+  </div>
 
 {% endblock content %}
+
