--- a/templates/inc/answer.html
+++ b/templates/inc/answer.html
@@ -1,36 +1,62 @@
 {% load static %}
 
-  <div class="card p-2 m-3">
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-1 mx-0 p-0">
-          <div class="row">
-            <img src="{{ answer.author.avatar.url }}" width="64" height="64" class="img-thumbnail">
-          </div>
+<div class="card p-2 m-3">
+  <a name="{{ answer.pk }}"></a>
+  <div class="container">
 
-          <div class="row  pl-2 ">
-            <button type="button" class="btn btn-default p-1" aria-label="Left Align">
-              <span class="oi oi-chevron-top" aria-hidden="true"></span>
-            </button>
-            <button type="button" class="btn btn-default p-1" aria-label="Left Align">
-              <span class="oi oi-chevron-bottom" aria-hidden="true"></span>
-            </button>
-          </div>
-          <div class="row pl-4 h-1">
-            <h5>{{ answer.currating }}</h5>
-          </div>
+    <div class="row justify-content-center">
+      <div class="col-1 mx-0 p-0">
+
+        <div class="row">
+          <img class="img-thumbnail mx-2" height="64" src="{{ answer.author.avatar.url }}" width="64">
         </div>
 
-        <div class="col-10">
-            <p class="card-text">{{ answer.text }}</p>
-            <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-            <label class="form-check-label" for="defaultCheck1">
-              {% if answer.is_correct %}
-              Correct answer!
-              {% endif %}
+        <div class="row pl-3 pane">
+          <button aria-label="Left Align" class="btn btn-xs p-1" type="button">
+            <i aria-hidden="true" class="oi oi-chevron-top like-click" like-id={{answer.id}}></i>
+          </button>
 
-            </label>
+          <button aria-label="Left Align" class="btn btn-default p-1" type="button">
+            <span aria-hidden="true" class="oi oi-chevron-bottom dislike-click" dislike-id={{answer.id}}></span>
+          </button>
         </div>
       </div>
+
+      <div class="col-10">
+        <div class="row text-muted">
+          <div class="col-8">
+            {{answer.author}}
+          </div>
+          <div class="col text-right">
+            <cite>{{ answer.create_date }}</cite>
+          </div>
+
+        </div>
+        <p class="card-text">{{ answer.text }}</p>
+
+        <div class="row ml-1">
+          <div class="col-1 m-0 p-0">
+            <h5 id={{question.id}}>
+              {% if answer.currating is None %}
+              0
+              {% elif answer.currating > 0%}
+                 +{{ answer.currating }}
+              {% else %}
+                {{ answer.currating }}
+              {% endif %}
+            </h5>
+          </div>
+        </div>
+
+
+      </div>
+
+
+      <label>
+        {% if answer.is_right %}
+        Correct answer!
+        {% endif %}
+      </label>
     </div>
   </div>
+</div>
