--- a/templates/inc/question.html
+++ b/templates/inc/question.html
@@ -1,40 +1,78 @@
 {% load static %}
 
 <div class="card p-2 m-3">
-	<h5> <a href="{% url 'question' qid=question.id %}">{{question.title}}</a></h5>
+  <h5><a href="{% url 'question' qid=question.id %}">{{question.title}}</a></h5>
 
-		<div class="container">
-			<div class="row justify-content-center">
-				<div class="col-1 mx-0 p-0">
-					<div class="row text-center сenter-top my-1">
-						{{question.author}}
-					</div>
-					<div class="row">
-					<img src="{{ question.author.avatar.url }}" width="64" height="64" class="img-thumbnail mx-2">
-					</div>
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-1 mx-0 p-0">
 
-					<div class="row  pl-2 ">
-						<button type="button" class="btn btn-default p-1" aria-label="Left Align">
-							<span class="oi oi-chevron-top" aria-hidden="true"></span>
-						</button>
-						<button type="button" class="btn btn-default p-1" aria-label="Left Align">
-							<span class="oi oi-chevron-bottom" aria-hidden="true"></span>
-						</button>
-					</div>
-						<div class="row pl-4 h-1">
-							<h5>{{ question.currating }}</h5>
-						</div>
-					</div>
+        <div class="row">
+          <img class="img-thumbnail mx-2" height="64" src="{{ question.author.avatar.url }}" width="64">
+        </div>
 
-					<div class="col-10">
-						<p class="card-text">{{ question.text }}</p>
-						<a href="{% url 'question' qid=question.id %}" ></a>
-							Tags:
-							{% for tag in question.tags.all %}
-								<a href="{% url 'tag' tag_name=tag %}" >{{tag}}</a>
-							{% endfor %}
+        <div class="row pl-3 pane">
+          <button aria-label="Left Align" class="btn btn-xs p-1" type="button">
+            <i aria-hidden="true" class="oi oi-chevron-top like-click" like-id={{question.id}}></i>
+          </button>
 
-				</div>
-			</div>
-		</div>
+          <button aria-label="Left Align" class="btn btn-default p-1" type="button">
+            <span aria-hidden="true" class="oi oi-chevron-bottom dislike-click" dislike-id={{question.id}}></span>
+          </button>
+        </div>
+      </div>
+
+
+      <div class="col-10">
+        <div class="row text-muted">
+          <div class="col-8">
+            {{question.author}}
+          </div>
+          <div class="col text-right">
+            <cite>{{ question.create_date }}</cite>
+          </div>
+
+        </div>
+        <p class="card-text">{{ question.text }}</p>
+        <a href="{% url 'question' qid=question.id %}"></a>
+
+        <div class="row ml-1">
+          <div class="col-1 m-0 p-0">
+            <h5 id={{question.id}}>
+              {% if question.currating is None %}
+              0
+              {% elif question.currating > 0%}
+              +{{ question.currating }}
+              {% else %}
+              {{ question.currating }}
+              {% endif %}
+              </h5>
+          </div>
+
+          <div class="col-2">
+            <h6>
+              <a href="{% url 'question' qid=question.id %}">
+                {% if question.count_answers is None %}
+                0
+                {% else %}
+                {{ question.count_answers }}
+                {% endif %}
+                answers </a>
+            </h6>
+          </div>
+          <div class="col-6">
+
+            {% for tag in question.tags.all %}
+            <button class="btn btn-light btn-sm" type="button">
+              <a class="text-reset" href="{% url 'tag' tag_name=tag %}">{{tag}}</a>
+            </button>
+            {% endfor %}
+
+          </div>
+        </div>
+
+
+      </div>
+    </div>
+  </div>
 </div>
