--- a/templates/login.html
+++ b/templates/login.html
@@ -1,25 +1,27 @@
 {% extends 'base.html' %}
+{% load bootstrap4 %}
 {% block content %}
 
-  <div class="row">
-    <div class="col-10">
-      <h3 style="margin-bottom: 15px;">Log In</h3>
-      <form>
-        <div class="form-group row">
-          <label class="col-sm-2 col-form-label" for="exampleInputEmail1">Email</label>
-          <div class="col-sm-10">
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-          </div>
-        </div>
-        <div class="form-group row">
-          <label class="col-sm-2 col-form-label" for="exampleInputPassword1">Password</label>
-          <div class="col-sm-10">
-            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-          </div>
-        </div>
-        <button type="submit" class="btn btn-primary">Sign in</button>
-      </form>
-    </div>
+<div class="row">
+  <div class="col-10">
+    <h3 style="margin-bottom: 15px;">Log In</h3>
+
+      <form action="./?next={{redirect_to}}" method="post" novalidate>
+        {% csrf_token %}
+        {% if form.errors %}
+        <p>
+          Your username and password didn't match.
+          Please try again.
+        </p>
+        {% endif %}
+
+        {% bootstrap_form form %}
+        {% buttons %}
+        <button class="btn btn-primary" type="submit">Login</button>
+        {% endbuttons %}
+
+    </form>
   </div>
+</div>
 
 {% endblock content %}
