--- a/templates/register.html
+++ b/templates/register.html
@@ -1,111 +1,18 @@
 {% extends 'base.html' %}
+{% load bootstrap4 %}
 {% block content %}
 
-<div class="row">
-      <div class="col-10">
-        <h3 style="margin-bottom: 15px;">Sign Up</h3>
-
-        <form class="needs-validation" novalidate>
-            <div class="form-row">
-              <div class="col-md-6 mb-3">
-                <label for="validationCustom01">First name</label>
-                <input type="text" class="form-control" id="validationCustom01" placeholder=" First name " required>
-                <div class="valid-feedback">
-                  Looks good!
-                </div>
-              </div>
-              <div class="col-md-6 mb-3">
-                <label for="validationCustom02"> Last name</label>
-                <input type="text" class="form-control" id="validationCustom02" placeholder=" Last name" required>
-                <div class="valid-feedback">
-                  Looks good!
-                </div>
-              </div>
-            </div>
-
-            <div class="form-row">
-               <div class="col-md-4 mb-3">
-                <label for="validationCustomUsername">Username </label>
-                <div class="input-group">
-                  <div class="input-group-prepend">
-                    <span class="input-group-text" id="inputGroupPrepend">@</span>
-                  </div>
-                  <input type="text" class="form-control" id="validationCustomUsername" placeholder="Username " aria-describedby="inputGroupPrepend" required>
-                  <div class="invalid-feedback">
-                    Please choose a username.
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-4 mb-3">
-                <label for="validationCustom03">City</label>
-                <input type="text" class="form-control" id="validationCustom03" placeholder="City" required>
-                <div class="invalid-feedback">
-                  Please provide a valid city.
-                </div>
-              </div>
-              <div class="col-md-4 mb-3">
-                <label for="inputPassword6">Password</label>
-                <input type="password" id="validationCustom04" class="form-control" aria-describedby="passwordHelpInline" required
-                        minlength="8" maxlength="20">
-                <small id="passwordHelpInline" class="text-muted">
-                Must be 8-20 characters long.
-                </small>
-                <div class="invalid-feedback">
-                  Please provide a valid password.
-                </div>
-              </div>
-            </div>
-
-              <div class="custom-file">
-                <label for="validatedCustomFile">Avatar</label>
-
-                <input type="file" class="custom-file-input" id="validatedCustomFile" required>
-                <label class="custom-file-label" for="validatedCustomFile">Choose avatar...</label>
-                <div class="invalid-feedback">Please provide an avatar</div>
-
-                <div class="invalid-feedback">
-                  Please provide a valid avatar.
-
-                </div>
-            </div>
-
-            <div class="form-group">
-              <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
-                <label class="form-check-label" for="invalidCheck">
-                  Agree to terms and conditions
-                </label>
-                <div class="invalid-feedback">
-                  You must agree before submitting.
-                </div>
-              </div>
-            </div>
-            <button class="btn btn-primary" type="submit">Submit form</button>
-          </form>
-
-          <script>
-          // Example starter JavaScript for disabling form submissions if there are invalid fields
-          (function() {
-            'use strict';
-            window.addEventListener('load', function() {
-              // Fetch all the forms we want to apply custom Bootstrap validation styles to
-              var forms = document.getElementsByClassName('needs-validation');
-              // Loop over them and prevent submission
-              var validation = Array.prototype.filter.call(forms, function(form) {
-                form.addEventListener('submit', function(event) {
-                  if (form.checkValidity() === false) {
-                    event.preventDefault();
-                    event.stopPropagation();
-                  }
-                  form.classList.add('was-validated');
-                }, false);
-              });
-            }, false);
-          })();
-          </script>
-
-
-      </div>
+  <div class="row">
+    <div class="col-10">
+      <h3 style="margin-bottom: 15px;">Register</h3>
+      <form method="post" novalidate>
+        {% csrf_token %}
+        {% bootstrap_form form %}
+        {% buttons %}
+            <button type="submit" class="btn btn-primary">Login</button>
+        {% endbuttons %}
+      </form>
+    </div>
   </div>
 
 {% endblock content %}
