--- a/templates/settings.html
+++ b/templates/settings.html
@@ -1,50 +1,26 @@
 {% extends 'base.html' %}
-{% load static %}
+{% load bootstrap4 %}
 {% block content %}
 
   <div class="row">
     <div class="col-10">
-      <h3 style="margin-bottom: 15px;">Settings: Bob1234</h3>
+      <h3 style="margin-bottom: 15px;">Settings</h3>
+      <form method="post" novalidate>
+        {% csrf_token %}
+<!--        {% if form.errors %}-->
+<!--        <p>-->
+<!--            Your username and password didn't match.-->
+<!--            Please try again.-->
+<!--        </p>-->
+<!--        {% endif %}-->
 
-      <form>
+        {% bootstrap_form form %}
+        {% buttons %}
+            <button type="submit" class="btn btn-primary">Save</button>
+        {% endbuttons %}
 
-          <div class="form-group row">
-            <label class="col-sm-1 col-form-label" for="exampleInputEmail1">Login</label>
-            <div class="col-sm-10">
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter new login">
-            </div>
-          </div>
-          <div class="form-group row">
-            <label class="col-sm-1 col-form-label" for="exampleInputPassword1">Email</label>
-            <div class="col-sm-10">
-              <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Enter new email">
-            </div>
-          </div>
-          <div class="form-group row">
-            <label class="col-sm-1 col-form-label" for="exampleInputPassword1">City</label>
-            <div class="col-sm-10">
-              <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Enter new city">
-            </div>
-          </div>
-          <div class="media">
-            <img src="{% static 'img/cat.jpg' %}" width="65" height="65" class="img-thumbnail mr-3">
-            <div class="media-body">
-              <form>
-                <div class="form-group">
-                  <label for="exampleFormControlFile1">Chouse new avatar</label>
-                  <input type="file" class="form-control-file" id="exampleFormControlFile1">
-                </div>
-              </form>
-            </div>
-          </div>
-          <button type="submit" class="btn btn-primary my-3">Save</button>
       </form>
-
     </div>
-    <div class="col-2 d-none d-sm-none d-md-block">
-      <div class="row" style="min-height: 50px;"></div>
-
-      </div>
-    </div>
+  </div>
 
 {% endblock content %}
