--- a/templates/base.html
+++ b/templates/base.html
@@ -10,10 +10,15 @@
   <link href="{% static '/css/bootstrap.min.css' %}" rel="stylesheet">
   <link href="{% static '/open-iconic/font/css/open-iconic-bootstrap.css' %}" rel="stylesheet">
   <title> AskMe project </title>
-
 </head>
 
 <body>
+  <script
+          crossorigin="anonymous"
+          integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+          src="https://code.jquery.com/jquery-3.5.1.min.js">
+  </script>
+  <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
   {% if request.user.is_authenticated %}
     {% include 'inc/navbar_for_user.html' %}
   {% else %}
@@ -37,8 +42,7 @@
       </div>
 
     </main>
-  <script src="{% static 'js/jquery.com/jquery-3.4.1.slim.min.js' %}"></script>
-  <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+
 </body>
 
 </html>
