--- a/templates/inc/question.html
+++ b/templates/inc/question.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <div class="card p-2 m-3">
-  <h5><a href="{% url 'question' qid=question.id %}">{{question.title}}</a></h5>
+  <h5><a href="{% url 'question' qid=question.id %}">{{ question.title }}</a></h5>
 
   <div class="container">
     <div class="row justify-content-center">
@@ -11,22 +11,56 @@
           <img class="img-thumbnail mx-2" height="64" src="{{ question.author.avatar.url }}" width="64">
         </div>
 
-        <div class="row pl-3 pane">
-          <button aria-label="Left Align" class="btn btn-xs p-1" type="button">
-            <i aria-hidden="true" class="oi oi-chevron-top like-click" like-id={{question.id}}></i>
-          </button>
+        {% if request.user.is_authenticated %}
+          {% if question.user_rate > 0 %}
+            <div class="row pl-3 pane">
+              <button aria-label="Left Align" class="btn btn-xs p-1" type="button" style="color: #12b706">
+                <i aria-hidden="true" class="oi oi-chevron-top"></i>
+              </button>
+              <button aria-label="Left Align" class="btn btn-default p-1" type="button" style="color: #525252">
+                <span aria-hidden="true" class="oi oi-chevron-bottom"></span>
+              </button>
+            </div>
+          {% elif question.user_rate < 0 %}
+            <div class="row pl-3 pane">
+              <button aria-label="Left Align" class="btn btn-xs p-1" type="button" style="color: #525252">
+                <i aria-hidden="true" class="oi oi-chevron-top"></i>
+              </button>
+              <button aria-label="Left Align" class="btn btn-default p-1" type="button" style="color: #e51f09">
+                <span aria-hidden="true" class="oi oi-chevron-bottom"></span>
+              </button>
+            </div>
+          {% else %}
+            <div class="row pl-3 pane">
+            <button aria-label="Left Align" class="btn btn-xs p-1" type="button" style="color: #525252">
+              <i aria-hidden="true" class="oi oi-chevron-top like-click" like-id={{question.id}}></i>
+            </button>
 
-          <button aria-label="Left Align" class="btn btn-default p-1" type="button">
-            <span aria-hidden="true" class="oi oi-chevron-bottom dislike-click" dislike-id={{question.id}}></span>
-          </button>
-        </div>
+            <button aria-label="Left Align" class="btn btn-default p-1" type="button" style="color: #525252">
+               <i aria-hidden="true" class="oi oi-chevron-bottom dislike-click" dislike-id={{question.id}}></i>
+            </button>
+          </div>
+          {% endif %}
+
+        {% else %}
+          <div class="row pl-3 pane">
+            <button aria-label="Left Align" class="btn btn-xs p-1" type="button" style="color: #525252">
+              <i aria-hidden="true" class="oi oi-chevron-top"></i>
+            </button>
+
+            <button aria-label="Left Align" class="btn btn-default p-1" type="button" style="color: #525252">
+               <i aria-hidden="true" class="oi oi-chevron-bottom"></i>
+            </button>
+          </div>
+        {% endif %}
+
       </div>
 
 
       <div class="col-10">
         <div class="row text-muted">
           <div class="col-8">
-            {{question.author}}
+            {{ question.author }}
           </div>
           <div class="col text-right">
             <cite>{{ question.create_date }}</cite>
@@ -38,40 +72,28 @@
 
         <div class="row ml-1">
           <div class="col-1 m-0 p-0">
-            <h5 id={{question.id}}>
-              {% if question.currating is None %}
-              0
-              {% elif question.currating > 0%}
-              +{{ question.currating }}
-              {% else %}
-              {{ question.currating }}
-              {% endif %}
-              </h5>
+            <h5 id={{ question.id }}>
+              {{ question.currating|default_if_none:0|stringformat:"+d" }}
+            </h5>
           </div>
 
           <div class="col-2">
             <h6>
               <a href="{% url 'question' qid=question.id %}">
-                {% if question.count_answers is None %}
-                0
-                {% else %}
-                {{ question.count_answers }}
-                {% endif %}
-                answers </a>
+                {{ question.count_answers|default:0 }} answers
+              </a>
             </h6>
           </div>
-          <div class="col-6">
+          <div class="col-9 mr-0 pr-0">
 
             {% for tag in question.tags.all %}
-            <button class="btn btn-light btn-sm" type="button">
-              <a class="text-reset" href="{% url 'tag' tag_name=tag %}">{{tag}}</a>
-            </button>
+              <button class="btn btn-light btn-sm" type="button">
+                <a class="text-reset" href="{% url 'tag' tag_name=tag %}">{{ tag }}</a>
+              </button>
             {% endfor %}
 
           </div>
         </div>
-
-
       </div>
     </div>
   </div>
